feat(A1-A6): Milestone 1 correctness fixes - COGS, timezone scoping, outbox, no fallback accounts, oversell protection, parsePermissions fix